# ArdumowerROS

./: README.md
ArdumowerTurtlebot/STL files/: Bumper1.stl  Bumper1_right.stl  Bumper2.stl  Bumper3.stl  Front-Middle.stl  Front-Spacer.stl  Front-right.stl  Körper29.stl  Motorhalter-1.stl  Motorhalter-2.stl  Motortreiber.stl  Not-Aus.stl  PCB-Bracket-Small.stl  PCB-Bracket.stl  RPI Spacer.stl  Rear-Spacer.stl  Stützrad.stl  back-left.stl  back_right.stl  spacer-left.stl  spacer-right.stl
Code/MicroROS/: readme.md
Code/MicroROS/uros_ardumower/: CMakeLists.txt  package.xml
Code/ardumower/ardumower/: .cproject  .project  adcman.cpp  ardumower.ino  battery.h  consoleui.h  i2c.cpp  imu.cpp  imu.h  motor.h  mower.cpp  mower.h  perimeter.cpp  perimeter.h  pfod.cpp  pfod.h  robot.cpp  robot.h  ros.h  ros_driver.h  settings.h  spec.d
Code/esp32/: CMakeLists.txt  readme.md  sdkconfig  sdkconfig.old
Code/esp32/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  main.c  readme.md  uart_task.c  uart_task.cpp  uart_task.h
Code/ros/: CMakeLists.txt  package.xml  setup.py
Code/ros/ardumower/: structure.txt
Code/ros/ardumower_basecontroller/: setup.cfg  setup.py
Code/ros/ardumower_config/: ardumower_params.yaml
Code/ros/ardumower_driver/: ardumower_Base_controller.py  ardumower_driver.py
Code/ros/ardumower_msgs/: CMakeLists.txt
Code/ros/ardumower_node/: ardumower_node_simple.py
Code/ros2/ardumower_basecontroller/: package.xml
Code/ros2/ardumower_basecontroller/ardumower_basecontroller/: ardumower_basecontroller.py
Docs/: ROS2_diagram.drawio
(+44 files in other folders)
