<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ardumower_basecontroller</name>
  <version>0.0.0</version>
  <description>Ardumower base controller, interface between Ardumower messages and ROS 2</description>
  <maintainer email="paddy-daun@web.de">ros</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

<exec_depend>rclpy</exec_depend>
<exec_depend>ardumower_msgs</exec_depend>
<exec_depend>ardumower_driver</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
